# ClangTest

./: .gitignore  CMakeLists.txt  build.sh  configure.sh
cmake/modules/: FindGMock.cmake
config/: config.h.in
include/: Calculator.h  config.h
src/: CMakeLists.txt  Calculator.cpp  Main.cpp
unittests/: CMakeLists.txt
unittests/src/: Test_Calculator.cpp
